Finalizando camada de infrastrutura com migrations e banco de dados SQLite

--- a/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=CleanArchitecture.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
