--- a/CleanArchitecture.Infra.Data/CleanArchitecture.Infra.Data.csproj
+++ b/CleanArchitecture.Infra.Data/CleanArchitecture.Infra.Data.csproj
@@ -12,7 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
+      <PrivateAssets>none</PrivateAssets>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup>
